Fix h-card template to use extra_classes parameter
The h-card template was hardcoding 'p-author' class instead of using the extra_classes parameter passed from the template tag. This caused test failures after removing django-model-utils dependency.

--- a/src/indieweb/templates/indieweb/h-card.html
+++ b/src/indieweb/templates/indieweb/h-card.html
@@ -1,4 +1,4 @@
-<div class="h-card p-author">
+<div class="h-card{% if extra_classes %} {{ extra_classes }}{% endif %}">
   {% if h_card.photo %}
     {% for photo in h_card.photo %}
       {% if photo.value %}
